Refinement of travis-ci file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: go
 go:
  - 1.8.1
- - release
+ - stable
 
 script:
  - cp -Rf ../api-gateway ../../.. && cd ../../../api-gateway && go get github.com/stretchr/testify/assert && go build -v && go test -v -i gateway_test.go
